--- a/src/components/Modal/styles.css
+++ b/src/components/Modal/styles.css
@@ -27,7 +27,7 @@
     font-size: 32px;
     width: 100%;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     margin: 0;
     margin-top: 18px;
     margin-right: 50px;
@@ -59,9 +59,6 @@
     font-size: 1rem;
     margin-top: 50px;
     color: #666;
-    &::placeholder {
-      color: #666;
-    }
   }
   
   .custom-file-input {
@@ -76,6 +73,11 @@
     justify-content: center;
     margin-top: 30px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  }
+  
+  .custom-file-input span {
+    margin-left: 5px;
+    margin-right: 10px;
   }
   
   .image-preview img {
@@ -99,6 +101,9 @@
     color: #FFF;
     text-align: center;
     padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   
     &:hover {
       opacity: 0.9;
