--- a/src/components/Login/styles.css
+++ b/src/components/Login/styles.css
@@ -17,7 +17,7 @@
     justify-content: center;
     align-items: center;
     color: #000;
-    font-family: Poppins;
+    font-family: 'Poppins';
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -36,11 +36,11 @@
     justify-content: center;
   }
   
-  #login,
+  #username,
   #password {
     background: none;
     border: none;
-    border-bottom: 1px solid #4D4D4D;
+    border-bottom: 0.063rem solid #4D4D4D;
     width: 60%;
     padding: 1.31rem 0 0.8rem 0.62rem;
     box-sizing: border-box;
@@ -58,7 +58,7 @@
     height: 3.125rem;
     border-radius: 0.3125rem;
     background: #6272A4;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 0rem 0.25rem 0.25rem 0rem rgba(0, 0, 0, 0.25);
     margin-top: 1.25rem;
     margin-bottom: 2.56rem;
     cursor: pointer;
