--- a/src/components/Login/styles.css
+++ b/src/components/Login/styles.css
@@ -53,7 +53,7 @@
     }
   }
   
-  input[type='submit'] {
+  #submit-button {
     width: 60%;
     height: 3.125rem;
     border-radius: 0.3125rem;
