--- a/src/components/NewPostButton/styles.css
+++ b/src/components/NewPostButton/styles.css
@@ -25,6 +25,11 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+  
+    &:disabled {
+      background-color: rgb(170, 168, 168);
+      cursor: auto;
+    }
   }
   
   .add-post-button span {
